Begins to stretch the canvas to full screen, still very buggy, perhaps a rollback to predefined sizes. (could be a UI treatment to guide the user to only once render the stage and commit to the orientation. Changes the colour scheme, and adds a theming library. Game is passable via the ESCAPE key.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -35,41 +35,12 @@ body {
 /*
   Let's begin
   ===========
- */
-/*
-.scs-scene {
+*/
+
+canvas {
   position: absolute;
-  left: 0;
+  top: 0;
   bottom: 0;
-  width: 100%;
-  height: 300px;
+  left: 0;
+  right: 0;
 }
-
-.scs-scene__layer {
-  // width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
-.scs-waveform {
-  background-size: 100% 100%;
-  margin-left: 50%;
-}
-
-.scs-vessel {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  background-color: white;
-  border-radius: 50%;
-  left: 50%;
-  margin-left: -10px;
-  top: 50%;
-  margin-top: -10px;
-}
- */
-
-
-
-
-
